--- a/Band-Website/Store.html
+++ b/Band-Website/Store.html
@@ -12,6 +12,7 @@
 						<li><a href="index.html" title="Home">Home</a></li>
 						<li><a href="About.html" title="About">About</a></li>
 						<li><a href="Store.html" title="Store">Store</a></li>
+						<li><a href="login.html" title="login">Login</a></li>
 					</ul>
 				</nav>
 				
