Modified: About, Store, Idex, Styles

--- a/Band-Website/About.html
+++ b/Band-Website/About.html
@@ -20,7 +20,7 @@
 			</header><!-- /header -->
 			<section class="contents-section container">
 				<h2 class="section-heading">About</h2>
-				<img  class="bandImage" src="C:/Users/darra/Pictures/AllTimeLow.jpg">
+				<img  class="bandImage" src="images/AllTimeLow.jpg">
 				<p> All Time Low is an American rock band from Towson, Maryland, a suburb of Baltimer, formed in 2003.
 				The band consists of Alex Gaskarth (lead vocalist and rhythm guitarist), Jack Barakat (lead guitarist and backing vocalist), Zack Merrick (bassist and backing vocalist) and Rain Dawson (Drummer).			
 				</p>
@@ -34,16 +34,16 @@
 				<ul class="nav footer-nav">
 					<li>
 						<a href="https://www.youtube.com/channel/UCSLQKylf_bibeVwMnBO1MRg" target="_blank">
-						<img src="C:/Users/darra/Pictures/youtube.png">
+						<img src="images/youtube.png">
 						</a>
 						<a href="https://open.spotify.com/artist/46gyXjRIvN1NL1eCB8GBxo" target="_blank">
-						<img src="C:/Users/darra/Pictures/spotify.png">
+						<img src="images/spotify.png">
 						</a>
 						<a href="https://www.instagram.com/alltimelow/?hl=en" target="_blank">
-						<img src="C:/Users/darra/Pictures/instagram.png">
+						<img src="images/instagram.png">
 						</a>
 						<a href="https://www.facebook.com" target="_blank">
-						<img src="C:/Users/darra/Pictures/facebook.png">
+						<img src="images/facebook.png">
 						</a>
 					</li>
 				</ul>
