--- a/Band-Website/Store.html
+++ b/Band-Website/Store.html
@@ -23,7 +23,7 @@
 				<div class="shop-items">
 					<div class="shop-item">
 						<span class="shop-item-title">Put Up or Shut Up</span>
-						<img class="shop-item-image" src="C:/Users/darra/Pictures/Put Up or Shut Up.jpg">
+						<img class="shop-item-image" src="images/Put Up or Shut Up.jpg">
 					<div class="shop-item-details">
 						<span class="shop-item-price">€10.00</span>
 						<button class="btn primary-btn shop-item-button" type="button">ADD TO CART</button>
@@ -31,7 +31,7 @@
 				</div>
 				<div class="shop-item">
 						<span class="shop-item-title">So Wrong It's Right</span>
-						<img class="shop-item-image" src="C:/Users/darra/Pictures/So wrong its right.jpg">
+						<img class="shop-item-image" src="images/So wrong its right.jpg">
 					<div class="shop-item-details">
 						<span class="shop-item-price">€10.00</span>
 						<button class="btn primary-btn shop-item-button" type="button">ADD TO CART</button>
@@ -39,7 +39,7 @@
 				</div>
 				<div class="shop-item">
 						<span class="shop-item-title">Nothing Personal</span>
-						<img class="shop-item-image" src="C:/Users/darra/Pictures/nothingpersonal.jpg">
+						<img class="shop-item-image" src="images/nothingpersonal.jpg">
 					<div class="shop-item-details">
 						<span class="shop-item-price">€10.00</span>
 						<button class="btn primary-btn shop-item-button" type="button">ADD TO CART</button>
@@ -47,7 +47,7 @@
 				</div>
 				<div class="shop-item">
 						<span class="shop-item-title">Dirty Work</span>
-						<img class="shop-item-image" src="C:/Users/darra/Pictures/dirtywork.jpg">
+						<img class="shop-item-image" src="images/dirtywork.jpg">
 					<div class="shop-item-details">
 						<span class="shop-item-price">€10.00</span>
 						<button class="btn primary-btn shop-item-button" type="button">ADD TO CART</button>
@@ -55,7 +55,7 @@
 				</div>
 				<div class="shop-item">
 						<span class="shop-item-title">Don't Panic</span>
-						<img class="shop-item-image" src="C:/Users/darra/Pictures/Don't Panic.jpg">
+						<img class="shop-item-image" src="images/Don't Panic.jpg">
 					<div class="shop-item-details">
 						<span class="shop-item-price">€12.99</span>
 						<button class="btn primary-btn shop-item-button" type="button">ADD TO CART</button>
@@ -63,7 +63,7 @@
 				</div>
 				<div class="shop-item">
 						<span class="shop-item-title">Future Hearts</span>
-						<img class="shop-item-image" src="C:/Users/darra/Pictures/Future Hearts.jpg">
+						<img class="shop-item-image" src="images/Future Hearts.jpg">
 					<div class="shop-item-details">
 						<span class="shop-item-price">€12.99</span>
 						<button class="btn primary-btn shop-item-button" type="button">ADD TO CART</button>
@@ -71,7 +71,7 @@
 				</div>
 				<div class="shop-item">
 						<span class="shop-item-title">Last Young Renegade</span>
-						<img class="shop-item-image" src="C:/Users/darra/Pictures/Last Young Renegade.jpg">
+						<img class="shop-item-image" src="images/Last Young Renegade.jpg">
 					<div class="shop-item-details">
 						<span class="shop-item-price">€12.99</span>
 						<button class="btn primary-btn shop-item-button" type="button">ADD TO CART</button>
@@ -84,7 +84,7 @@
 				<div class="shop-items">
 					<div class="shop-item">
 						<span class="shop-item-title">T-Shirt</span>
-					<img class="shop-item-image" src="C:/Users/darra/Pictures/atl_rosebleachshirt.jpg">
+					<img class="shop-item-image" src="images/atl_rosebleachshirt.jpg">
 					<div class="shop-item-details">
 						<span class="shop-item-price">€10.00</span>
 						<button class="btn primary-btn shop-item-button" type="button">ADD TO CART</button>
@@ -92,7 +92,7 @@
 				</div>
 				<div class="shop-item">
 					<span class="shop-item-title">Jacket</span>
-					<img class="shop-item-image" src="C:/Users/darra/Pictures/SpadeJacket.jpg">
+					<img class="shop-item-image" src="images/SpadeJacket.jpg">
 					<div class="shop-item-details">
 						<span class="shop-item-price">€10.00</span>
 						<button class="btn primary-btn shop-item-button" type="button">ADD TO CART</button>
@@ -110,7 +110,7 @@
 				<div class="items-cart">
 					<div class="cart-row">
 						<div class="cart-item cart-col">
-							<img  class="cart-item-image" src="C:/Users/darra/Pictures/Last Young Renegade.jpg" width="100" height="100">
+							<img  class="cart-item-image" src="images/Last Young Renegade.jpg" width="100" height="100">
 							<span class="cart-item-title">Last Young Renegade</span>
 						</div>
 						<span class="cart-price cart-col">€10.00</span>
@@ -121,7 +121,7 @@
 					</div>
 				<div class="cart-row">
 					<div class="cart-item cart-col">
-						<img  class="cart-item-image" src="C:/Users/darra/Pictures/Don't Panic.jpg" width="100" height="100">
+						<img  class="cart-item-image" src="images/Don't Panic.jpg" width="100" height="100">
 						<span class="cart-item-title">Don't Panic</span>
 					</div>
 					<span class="cart-price cart-col">€10.00</span>
@@ -144,16 +144,16 @@
 				<ul class="nav footer-nav">
 					<li>
 						<a href="https://www.youtube.com/channel/UCSLQKylf_bibeVwMnBO1MRg" target="_blank">
-						<img src="C:/Users/darra/Pictures/youtube.png">
+						<img src="images/youtube.png">
 						</a>
 						<a href="https://open.spotify.com/artist/46gyXjRIvN1NL1eCB8GBxo" target="_blank">
-						<img src="C:/Users/darra/Pictures/spotify.png">
+						<img src="images/spotify.png">
 						</a>
 						<a href="https://www.instagram.com/alltimelow/?hl=en" target="_blank">
-						<img src="C:/Users/darra/Pictures/instagram.png">
+						<img src="images/instagram.png">
 						</a>
 						<a href="https://www.facebook.com" target="_blank">
-						<img src="C:/Users/darra/Pictures/facebook.png">
+						<img src="images/facebook.png">
 						</a>
 					</li>
 				</ul>
