--- a/Band-Website/index.html
+++ b/Band-Website/index.html
@@ -45,16 +45,16 @@
 				<ul class=" nav footer-nav">
 					<li>
 						<a href="https://www.youtube.com/channel/UCSLQKylf_bibeVwMnBO1MRg" target="_blank">
-						<img src="C:/Users/darra/Pictures/youtube.png">
+						<img src="images/youtube.png">
 						</a>
 						<a href="https://open.spotify.com/artist/46gyXjRIvN1NL1eCB8GBxo" target="_blank">
-						<img src="C:/Users/darra/Pictures/spotify.png">
+						<img src="images/spotify.png">
 						</a>
 						<a href="https://www.instagram.com/alltimelow/?hl=en" target="_blank">
-						<img src="C:/Users/darra/Pictures/instagram.png">
+						<img src="images/instagram.png">
 						</a>
 						<a href="https://www.facebook.com" target="_blank">
-						<img src="C:/Users/darra/Pictures/facebook.png">
+						<img src="images/facebook.png">
 						</a>
 					</li>
 				</ul>
