--- a/Band-Website/login.html
+++ b/Band-Website/login.html
@@ -5,7 +5,7 @@
 		<meta name="description" content="This is the description">
 		<link rel="stylesheet" href="styles.css">
 	</head>
-	<body>
+	<body class="login-body">
 		<header class="main-header">
 			<nav class="nav main-nav">
 				<ul>
